@@ -1,3 +1,7 @@
+EB-2007-05-02-0: Enhancem.: Changed parsing code for advance reservation 
+                            enhancements in qstat for v6.2
+                 Review:    RD
+
 GH-2007-04-30-0: Enhancem.: Added test for CR 6396036. This is covered by
                             IZ 125.
                  Review:    JG
